err/weberror.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Paste-2.0.3.dist-info'...
Listing './lib/python3.5/site-packages/Pygments-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/Tempita-0.5.2.egg-info'...
Listing './lib/python3.5/site-packages/WebError-0.13.1.egg-info'...
Listing './lib/python3.5/site-packages/WebOb-1.7.4.dist-info'...
Listing './lib/python3.5/site-packages/paste'...
Listing './lib/python3.5/site-packages/paste/auth'...
Listing './lib/python3.5/site-packages/paste/cowbell'...
Listing './lib/python3.5/site-packages/paste/debug'...
Listing './lib/python3.5/site-packages/paste/evalexception'...
Listing './lib/python3.5/site-packages/paste/evalexception/media'...
Listing './lib/python3.5/site-packages/paste/exceptions'...
Listing './lib/python3.5/site-packages/paste/util'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pygments'...
Listing './lib/python3.5/site-packages/pygments/filters'...
Listing './lib/python3.5/site-packages/pygments/formatters'...
Listing './lib/python3.5/site-packages/pygments/lexers'...
Listing './lib/python3.5/site-packages/pygments/styles'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tempita'...
Listing './lib/python3.5/site-packages/weberror'...
Listing './lib/python3.5/site-packages/weberror/eval-media'...
Compiling './lib/python3.5/site-packages/weberror/evalcontext.py'...
***   File "./lib/python3.5/site-packages/weberror/evalcontext.py", line 35
    exec code in self.namespace, self.globs
            ^
SyntaxError: Missing parentheses in call to 'exec'

Compiling './lib/python3.5/site-packages/weberror/evalexception.py'...
***   File "./lib/python3.5/site-packages/weberror/evalexception.py", line 127
    except ValueError, ve:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/weberror/exceptions'...
Compiling './lib/python3.5/site-packages/weberror/formatter.py'...
***   File "./lib/python3.5/site-packages/weberror/formatter.py", line 277
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/weberror/pdbcapture.py'...
***   File "./lib/python3.5/site-packages/weberror/pdbcapture.py", line 69
    raise state['exc_info'][0], state['exc_info'][1], state['exc_info'][2]
                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/weberror/util'...
Compiling './lib/python3.5/site-packages/weberror/util/security.py'...
***   File "./lib/python3.5/site-packages/weberror/util/security.py", line 46
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/weberror/util/serial_number_generator.py'...
***   File "./lib/python3.5/site-packages/weberror/util/serial_number_generator.py", line 93
    raise ValueError, (
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/webob'...
Listing './share'...
Listing './share/python-wheels'...
